# core/models/event.go
@@ -4,5 +4,6 @@ import "time"
 
 type Event interface {
   Timestamp() time.Time
+  CorrelationId() string
 }
 
