# core/models/opRunFinishedEvent.go
@@ -6,12 +6,14 @@ import (
 )
 
 func NewOpRunFinishedEvent(
+correlationId string,
 timestamp time.Time,
 opRunExitCode int,
 opRunId string,
 ) OpRunFinishedEvent {
 
   return &opRunFinishedEvent{
+    correlationId:correlationId,
     opRunExitCode:opRunExitCode,
     opRunId:opRunId,
     timestamp:timestamp,
@@ -20,12 +22,14 @@ opRunId string,
 }
 
 type OpRunFinishedEvent interface {
+  CorrelationId() string
   OpRunExitCode() int
   OpRunId() string
   Timestamp() time.Time
 }
 
 type opRunFinishedEvent struct {
+  correlationId string
   opRunExitCode int
   opRunId       string
   timestamp     time.Time
@@ -34,16 +38,22 @@ type opRunFinishedEvent struct {
 func (this opRunFinishedEvent) MarshalJSON() ([]byte, error) {
 
   data := struct {
+    CorrelationId string `json:"correlationId"`
     OpRunExitCode int `json:"opRunExitCode"`
     OpRunId       string `json:"opRunId"`
     Timestamp     time.Time `json:"timestamp"`
   }{
+    CorrelationId:this.CorrelationId(),
     OpRunExitCode:this.OpRunExitCode(),
     OpRunId:this.OpRunId(),
     Timestamp:this.Timestamp(),
   }
 
   return json.Marshal(data)
+}
+
+func (this opRunFinishedEvent) CorrelationId() string {
+  return this.correlationId
 }
 
 func (this opRunFinishedEvent) OpRunExitCode() int {
@@ -57,4 +67,3 @@ func (this opRunFinishedEvent) OpRunId() string {
 func (this opRunFinishedEvent) Timestamp() time.Time {
   return this.timestamp
 }
-
